Fixed page alignment

--- a/style.css
+++ b/style.css
@@ -155,9 +155,9 @@ nav {
   }
 
   .heroIntroDescription {
-    width: 75%;
+    width: 65%;
     text-align-last: center;
-    margin-left: 150px;
+    margin-left: 250px;
     font-weight: 400;
     font-size: 20px;
     line-height: 32px;
